--- a/APSIPA2019.html
+++ b/APSIPA2019.html
@@ -7,8 +7,8 @@
 </style></head>
 <body>
 <h2><strong>End-to-End Emotional Speech Synthesis Using Style Tokens and Semi-Supervised Training</strong></h2>
-<h3>Paper:</h3>
-<p><a href="https://arxiv.org/abs/"> http://arxiv.org/abs</a> (Submitted to Asia-Pacific Signal and Information Processing Association Annual Summit and Conference 2019)</p>
+<!-- <h3>Paper:</h3>
+<p><a href="https://arxiv.org/abs/"> http://arxiv.org/abs</a> (Submitted to Asia-Pacific Signal and Information Processing Association Annual Summit and Conference 2019)</p> -->
 <h3>Authors: </h3>
 Peng-fei Wu, Zhen-Hua Ling, Li-juan Liu, Hong-chuan Wu, Yuan Jiang, Li-Rong Dai
 <h3>Abstract: </h3>
